fix(ffe-cards): fix extra margin strippled cards condensed

--- a/packages/ffe-cards/less/stippled-card.less
+++ b/packages/ffe-cards/less/stippled-card.less
@@ -27,10 +27,8 @@
     }
 }
 
-.ffe-stippled-card__img--icon,
-.ffe-stippled-card__img--icon > .ffe-icons {
+.ffe-stippled-card__img--icon {
     margin: 0 @ffe-spacing-md 0 @ffe-spacing-xs;
-    color: var(--ffe-v-cards-icon-color);
 }
 
 .ffe-stippled-card--condensed {
@@ -39,5 +37,8 @@
 
 .ffe-stippled-card--condensed .ffe-stippled-card__img--icon {
     margin: 0 @ffe-spacing-2xs 0 0;
+}
+
+.ffe-stippled-card .ffe-icons {
     color: var(--ffe-v-cards-icon-color);
 }
